force-app/main/default/objects/Item_in_cart__c/Item_in_cart__c.object-meta.xml
<CustomObject>
    <label>Item in cart</label>
    <nameField>
        <label>Item in cart Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items in cart</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>