force-app/main/default/objects/Item_in_cart__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Items in cart</relationshipLabel>
    <relationshipName>Items_in_cart</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>