force-app/main/default/objects/Item_in_cart__c/fields/Shopping_Cart__c.field-meta.xml
<CustomField>
    <fullName>Shopping_Cart__c</fullName>
    <label>Shopping Cart</label>
    <referenceTo>Shopping_Cart__c</referenceTo>
    <relationshipLabel>Items in cart</relationshipLabel>
    <relationshipName>Items_in_cart</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>